# ChangeLog for dev-java/commons-httpclient
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-httpclient/ChangeLog,v 1.19 2005/05/29 15:39:17 corsair Exp $

  29 May 2005; Markus Rothe <corsair@gentoo.org>
  commons-httpclient-2.0.2.ebuild, commons-httpclient-3.0_rc1.ebuild:
  Stable on ppc64; added ~ppc64

  04 May 2005; Jan Brinkmann <luckyduck@gentoo.org>
  commons-httpclient-2.0.1.ebuild, commons-httpclient-2.0.2.ebuild,
  commons-httpclient-3.0_rc1.ebuild:
  2.0.1 stable on amd64, ppc and x86

  09 Apr 2005; Markus Rothe <corsair@gentoo.org>
  commons-httpclient-2.0.2.ebuild:
  Added ~ppc64 to KEYWORDS

*commons-httpclient-3.0_rc1 (03 Apr 2005)

  03 Apr 2005; Thomas Matthijs <axxo@gentoo.org>
  +commons-httpclient-3.0_rc1.ebuild:
  version bump

  20 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org>
  commons-httpclient-2.0-r1.ebuild, commons-httpclient-2.0.1.ebuild,
  commons-httpclient-2.0.2.ebuild:
  added missing jikes dependency. see #78819.

  24 Dec 2004; Thomas Matthijs <axxo@gentoo.org> +files/jikes.diff,
  commons-httpclient-2.0-r1.ebuild:
  jikes fix #66520

  17 Oct 2004; Dylan Carlson <absinthe@gentoo.org>
  commons-httpclient-2.0.1.ebuild:
  keywords ~amd64; closes #67324.

  16 Oct 2004; Thomas Matthijs <axxo@gentoo.org>
  commons-httpclient-2.0-r1.ebuild, commons-httpclient-2.0.1.ebuild,
  commons-httpclient-2.0.2.ebuild:
  use java-pkg_dohtml instead of dohtml to also install the package-list in
  case of api docs: #50740

*commons-httpclient-2.0.2 (13 Oct 2004)

  13 Oct 2004; Thomas Matthijs <axxo@gentoo.org>
  +commons-httpclient-2.0.2.ebuild:
  version bump

  12 Oct 2004; Thomas Matthijs <axxo@gentoo.org>
  commons-httpclient-2.0-r1.ebuild, commons-httpclient-2.0.1.ebuild:
  made jikes happy, closes 66977

*commons-httpclient-2.0.1 (16 Sep 2004)

  16 Sep 2004; Thomas Matthijs <axxo@gentoo.org>
  +commons-httpclient-2.0.1.ebuild:
  version bump
