@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-httpclient/commons-httpclient-2.0.1.ebuild,v 1.9 2005/05/04 22:18:21 luckyduck Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-httpclient/commons-httpclient-2.0.1.ebuild,v 1.10 2005/07/10 13:01:54 axxo Exp $
 
 inherit java-pkg eutils
 
@@ -11,15 +11,18 @@ SRC_URI="mirror://apache/jakarta/commons/httpclient/source/${P/_/-}-src.tar.gz"
 LICENSE="Apache-2.0"
 SLOT="0"
 KEYWORDS="x86 ppc ~sparc amd64"
-IUSE="doc jikes"
+IUSE="doc jikes source"
+
+RDEPEND=">=virtual/jre-1.3
+	>=dev-java/log4j-1.2.5
+	dev-java/commons-logging"
 
 DEPEND=">=virtual/jdk-1.3
+	${RDEPEND}
 	sys-apps/sed
-	>=dev-java/log4j-1.2.5
 	>=dev-java/ant-1.4
-	dev-java/commons-logging
+	source? ( app-arch/zip )
 	jikes? ( dev-java/jikes )"
-RDEPEND=">=virtual/jdk-1.3"
 
 src_unpack() {
 	unpack ${A}
@@ -33,7 +36,7 @@ src_unpack() {
 	fi
 
 	epatch ${FILESDIR}/gentoo.diff || die "patching failed"
-	echo "commons-logging.jar=/usr/share/commons-logging/lib/commons-logging.jar" >> build.properties
+	echo "commons-logging.jar=$(java-pkg_getjar commons-logging commons-logging.jar)" >> build.properties
 }
 
 src_compile() {
@@ -46,4 +49,5 @@ src_compile() {
 src_install() {
 	java-pkg_dojar dist/${PN}.jar
 	use doc && java-pkg_dohtml -r dist/docs/*
+	use source && java-pkg_dosrc src/java/*
 }
